# VD-games

./: pyproject.toml
VD_games/: cli.py  engine.py
VD_games/games/: calc.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  VD_prime.py  VD_progression.py
