[project]
name = "vd-games"
version = "0.1.0"
description = "Practical work project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[project.scripts]
VD-prime = "VD_games.scripts.VD_prime:main"
VD-progression = "VD_games.scripts.VD_progression:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-calc = "VD_games.scripts.VD_calc:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-games = "VD_games.scripts.VD_games:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
